@@ -2,6 +2,7 @@ package com.gentics.mesh.graphql.type;
 
 import com.gentics.mesh.core.data.CreatorTrackingVertex;
 import com.gentics.mesh.core.data.EditorTrackingVertex;
+import com.gentics.mesh.core.data.MeshCoreVertex;
 import com.gentics.mesh.core.data.TransformableElement;
 import com.gentics.mesh.core.data.node.NodeContent;
 import com.gentics.mesh.core.data.schema.SchemaContainerVersion;
@@ -9,7 +10,9 @@ import com.gentics.mesh.etc.config.MeshOptions;
 import com.gentics.mesh.graphdb.model.MeshElement;
 import com.gentics.mesh.graphql.context.GraphQLContext;
 import dagger.Lazy;
+import graphql.schema.GraphQLArgument;
 import graphql.schema.GraphQLFieldDefinition;
+import graphql.schema.GraphQLNonNull;
 import graphql.schema.GraphQLObjectType;
 import graphql.schema.GraphQLTypeReference;
 
@@ -21,6 +24,7 @@ import static com.gentics.mesh.core.data.relationship.GraphPermission.READ_PERM;
 import static graphql.Scalars.GraphQLBoolean;
 import static graphql.Scalars.GraphQLString;
 import static graphql.schema.GraphQLFieldDefinition.newFieldDefinition;
+import static graphql.schema.GraphQLNonNull.nonNull;
 import static graphql.schema.GraphQLObjectType.newObject;
 
 @Singleton
@@ -75,27 +79,27 @@ public class InterfaceTypeProvider extends AbstractTypeProvider {
 
 		// .create
 		builder.field(newFieldDefinition().name("create").type(GraphQLBoolean)
-				.description("Flag which idicates whether the create permission is granted."));
+				.description("Flag which indicates whether the create permission is granted."));
 
 		// .read
 		builder.field(
-				newFieldDefinition().name("read").type(GraphQLBoolean).description("Flag which idicates whether the read permission is granted."));
+				newFieldDefinition().name("read").type(GraphQLBoolean).description("Flag which indicates whether the read permission is granted."));
 
 		// .update
 		builder.field(newFieldDefinition().name("update").type(GraphQLBoolean)
-				.description("Flag which idicates whether the update permission is granted."));
+				.description("Flag which indicates whether the update permission is granted."));
 
 		// .delete
 		builder.field(newFieldDefinition().name("delete").type(GraphQLBoolean)
-				.description("Flag which idicates whether the delete permission is granted."));
+				.description("Flag which indicates whether the delete permission is granted."));
 
 		// .publish
 		builder.field(newFieldDefinition().name("publish").type(GraphQLBoolean)
-				.description("Flag which idicates whether the publish permission is granted."));
+				.description("Flag which indicates whether the publish permission is granted."));
 
 		// .readPublished
 		builder.field(newFieldDefinition().name("readPublished").type(GraphQLBoolean)
-				.description("Flag which idicates whether the read published permission is granted."));
+				.description("Flag which indicates whether the read published permission is granted."));
 		return builder.build();
 	}
 
@@ -155,9 +159,30 @@ public class InterfaceTypeProvider extends AbstractTypeProvider {
 
 		// .permission
 		setField.accept(newFieldDefinition().name("permissions").description("Permission information of the element")
-				.type(new GraphQLTypeReference(PERM_INFO_TYPE_NAME)));
+			.type(new GraphQLTypeReference(PERM_INFO_TYPE_NAME))
+			.dataFetcher(env -> {
+				GraphQLContext gc = env.getContext();
+				MeshCoreVertex<?, ?> vertex = getMeshCoreVertex(env.getSource());
 
-		// TODO rolePerms
+				return gc.getUser().getPermissionInfo(vertex);
+			})
+		);
+
+		setField.accept(newFieldDefinition().name("rolePerms").description("Permissions information of the element for a certain role")
+			.type(new GraphQLTypeReference(PERM_INFO_TYPE_NAME))
+			.argument(new GraphQLArgument.Builder()
+				.name("role")
+				.description("The uuid of the role to get permissions for")
+				.type(nonNull(GraphQLString))
+			)
+			.dataFetcher(env -> {
+				GraphQLContext gc = env.getContext();
+				MeshCoreVertex<?, ?> vertex = getMeshCoreVertex(env.getSource());
+
+				gc.getUser().getPermissionInfo(vertex);
+				return vertex.getRolePermissions(gc, env.getArgument("role"));
+			})
+		);
 
 		// .created
 		setField.accept(
@@ -219,6 +244,16 @@ public class InterfaceTypeProvider extends AbstractTypeProvider {
 						}
 						return null;
 					}));
+		}
+	}
+
+	private MeshCoreVertex<?, ?> getMeshCoreVertex(Object source) {
+		if (source instanceof NodeContent) {
+			return ((NodeContent) source).getNode();
+		} else if (source instanceof SchemaContainerVersion) {
+			return ((SchemaContainerVersion) source).getSchemaContainer();
+		} else {
+			return (MeshCoreVertex<?, ?>) source;
 		}
 	}
 
