@@ -26,6 +26,8 @@ include::content/docs/variables.adoc-include[]
 [[v0.40.1]]
 == 0.40.1 (TBD)
 
+CAUTION: REST: When updating permissions to an element, unset permissions in the request will not change these permissions anymore. Previously, unset permission were set to false.
+
 icon:check[] Core: Various handlers were blocking the event loop when run. This has been fixed now.
 
 icon:check[] Core: Fixed delayed initialization of `VersionPurgeJobImpl` vertices. Previously the type was not setup during start up and this resulted in a warning when the type was first used.
@@ -33,6 +35,10 @@ icon:check[] Core: Fixed delayed initialization of `VersionPurgeJobImpl` vertice
 icon:plus[] Java Rest Client: The `createSchema()` methods now accept a `ParameterProvider` vararg parameter.
 
 icon:check[] Core: Schema validation will no longer fail by default, when Elasticsearch is not available. The previous behavior can be enforced by adding `?strictValidation=true`.
+
+icon:check[] GraphQL: Fixed a bug that prevented loading of permissions of an element.
+
+icon:plus[] GraphQL: Added the `rolePerms` field to mesh elements. This allows you to load permissions of a role, similar to the link:{{< relref "features.asciidoc" >}}#_querying_permissions[`?role` query parameter in REST].
 
 [[v0.40.0]]
 == 0.40.0 (27.08.2019)
